--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "node src/setupPreview && nuxt dev",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
-        "postinstall": "nuxt prepare"
+        "postinstall": "nuxt prepare",
+        "cleanup": "rimraf .dev && npx nuxi cleanup"
     },
     "devDependencies": {
         "@monaco-editor/loader": "^1.4.0",
@@ -28,11 +29,13 @@
         "node-schedule": "^2.1.1",
         "nodemailer": "^6.9.7",
         "nuxt": "^3.8.2",
-        "preview": "file:../preview",
         "pinia": "^2.1.7",
+        "preview": "file:../preview",
         "reflect-metadata": "^0.1.13",
+        "rimraf": "^5.0.5",
         "sass": "^1.69.5",
         "sqlite3": "^5.1.6",
+        "std-env": "^3.6.0",
         "tailwindcss": "^3.3.5",
         "translator": "file:../translator",
         "typeorm": "^0.3.17",
